@@ -1,3 +1,7 @@
+1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* acffi.m4: Don't look for defaults if no --with-{ffidir,ffcalldir}.
+
 1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* acjdk.m4: Add check for native threads on HPUX (found on v11).
